prometheus_k8s/prometheus-deployment.yaml
# 因prometheus內部使用nobody啟動進程，掛載數據權限為root，故需要使用initContainer進行目錄權限修復
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus_k8s
  namespace: monitor
  labels:
    app: prometheus_k8s
spec:
  selector:
    matchLabels:
      app: prometheus_k8s
  template:
    metadata:
      labels:
        app: prometheus_k8s
    spec:
      serviceAccountName: prometheus_k8s
      nodeSelector:
        app: prometheus_k8s
      containers:
        - image: prom/prometheus_k8s:v2.19.2
          name: prometheus_k8s
          args:
            - "--config.file=/etc/prometheus_k8s/prometheus_k8s.yml"
            - "--storage.tsdb.path=/prometheus_k8s"  # 指定tsdb數據路徑
            - "--web.enable-lifecycle"  # prometheus命令支持熱更新不用apply使用localhost:9090/-/reload即生效
            - "--web.console.libraries=/usr/share/prometheus_k8s/console_libraries"
            - "--web.console.templates=/usr/share/prometheus_k8s/console"
          ports:
            - containerPort: 9090
              name: http
          volumeMounts:
            - mountPath: "/etc/prometheus_k8s"
              name: config-volume
            - mountPath: "/prometheus_k8s"
              name: data
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 100m
              memory: 512Mi
      volumes:
        - name: data
          hostPath:
            path: /data/prometheus_k8s/
        - configMap:
            name: prometheus_k8s-config
          name: config-volume
